@@ -24,42 +24,134 @@
 #include <arpa/inet.h>
 #include <errno.h>
 
+#include "util.h"
 #include "udp.h"
 
-int udp_connect_input(struct io *io) {
-	int sock = socket(AF_INET, SOCK_DGRAM, 0);
-	if (sock < 0) {
-		ts_LOGf("socket(SOCK_DGRAM): %s\n", strerror(errno));
-		return -1;
+#ifndef IPV6_ADD_MEMBERSHIP
+#define IPV6_ADD_MEMBERSHIP IPV6_JOIN_GROUP
+#define IPV6_DROP_MEMBERSHIP IPV6_LEAVE_GROUP
+#endif
+
+static int is_multicast(struct sockaddr_storage *addr) {
+	int ret = 0;
+	switch (addr->ss_family) {
+	case AF_INET: {
+		struct sockaddr_in *addr4 = (struct sockaddr_in *)addr;
+		ret = IN_MULTICAST(ntohl(addr4->sin_addr.s_addr));
+		break;
+	}
+	case AF_INET6: {
+		struct sockaddr_in6 *addr6 = (struct sockaddr_in6 *)addr;
+		ret = IN6_IS_ADDR_MULTICAST(&addr6->sin6_addr);
+		break;
+	} }
+	return ret;
+}
+
+extern int ai_family;
+
+static int bind_addr(const char *hostname, const char *service, int socktype, struct sockaddr_storage *addr, int *addrlen, int *sock) {
+	struct addrinfo hints, *res, *ressave;
+	int n, ret = -1;
+
+	memset(&hints, 0, sizeof(struct addrinfo));
+	hints.ai_family = ai_family;
+	hints.ai_socktype = socktype;
+
+	n = getaddrinfo(hostname, service, &hints, &res);
+	if (n < 0) {
+		ts_LOGf("ERROR: getaddrinfo(%s): %s\n", hostname, gai_strerror(n));
+		return ret;
 	}
 
-	ts_LOGf("Connecting input to udp://%s:%d/\n", inet_ntoa(io->addr), io->port);
-	int on = 1;
-	setsockopt(sock, SOL_SOCKET, SO_REUSEADDR, &on, sizeof(on));
+	ressave = res;
+	while (res) {
+		*sock = socket(res->ai_family, res->ai_socktype, res->ai_protocol);
+		if (*sock > -1) {
+			if (bind(*sock, res->ai_addr, res->ai_addrlen) == 0) {
+				memcpy(addr, res->ai_addr, sizeof(*addr));
+				*addrlen = res->ai_addrlen;
+				ret = 0;
+				goto OUT;
+			} else {
+				char str_addr[INET6_ADDRSTRLEN];
+				my_inet_ntop(res->ai_family, res->ai_addr, str_addr, sizeof(str_addr));
+				ts_LOGf("ERROR: bind: %s:%s (%s): %s\n",
+					hostname, service, str_addr, strerror(errno));
+			}
+			close(*sock);
+			*sock = -1;
+		}
+		res = res->ai_next;
+	}
+OUT:
+	freeaddrinfo(ressave);
+
+	if (*sock > -1) {
+		int on = 1;
+		setsockopt(*sock, SOL_SOCKET, SO_REUSEADDR, &on, sizeof(on));
+		set_sock_nonblock(*sock);
+	}
+
+	return ret;
+}
+
+static int join_multicast_group(int sock, int ttl, struct sockaddr_storage *addr) {
+	switch (addr->ss_family) {
+	case AF_INET: {
+		struct ip_mreq mreq;
+		mreq.imr_multiaddr.s_addr = ((struct sockaddr_in *)addr)->sin_addr.s_addr;
+		mreq.imr_interface.s_addr = INADDR_ANY;
+
+		if (setsockopt(sock, IPPROTO_IP, IP_ADD_MEMBERSHIP, (const void *)&mreq, sizeof(mreq)) < 0) {
+			ts_LOGf("ERROR: setsockopt(IP_ADD_MEMBERSHIP): %s\n", strerror(errno));
+			return -1;
+		}
+		if (setsockopt(sock, IPPROTO_IP, IP_MULTICAST_TTL, &ttl, sizeof(ttl)) < 0) {
+			ts_LOGf("ERROR: setsockopt(IP_MULTICAST_TTL %d): %s\n", ttl, strerror(errno));
+		}
+		break;
+	}
+
+	case AF_INET6: {
+		struct ipv6_mreq mreq6;
+		memcpy(&mreq6.ipv6mr_multiaddr, &(((struct sockaddr_in6 *)addr)->sin6_addr), sizeof(struct in6_addr));
+		mreq6.ipv6mr_interface = 0; // interface index, will be set later
+
+		if (setsockopt(sock, IPPROTO_IPV6, IPV6_ADD_MEMBERSHIP, &mreq6, sizeof(mreq6)) < 0) {
+			ts_LOGf("ERROR: setsockopt(IPV6_ADD_MEMBERSHIP): %s\n", strerror(errno));
+			return -1;
+		}
+		if (setsockopt(sock, IPPROTO_IPV6, IPV6_MULTICAST_HOPS, &ttl, sizeof(ttl)) < 0) {
+			ts_LOGf("ERROR: setsockopt(IPV6_MULTICAST_HOPS %d): %s\n", ttl, strerror(errno));
+		}
+		break;
+	}
+	}
+
+	return 0;
+}
+
+int udp_connect_input(struct io *io) {
+	struct sockaddr_storage addr;
+	int addrlen = sizeof(addr);
+	int sock = -1;
+
+	memset(&addr, 0, sizeof(addr));
+
+	ts_LOGf("Connecting input to %s port %s\n", io->hostname, io->service);
+	if (bind_addr(io->hostname, io->service, SOCK_DGRAM, &addr, &addrlen, &sock) < 0)
+		return -1;
 
 	/* Set receive buffer size to ~2.0MB */
 	int bufsize = (2000000 / 1316) * 1316;
 	setsockopt(sock, SOL_SOCKET, SO_RCVBUF, (void *)&bufsize, sizeof(bufsize));
 
-	// subscribe to multicast group
-	if (IN_MULTICAST(ntohl(io->addr.s_addr))) {
-		struct ip_mreq mreq;
-		memcpy(&mreq.imr_multiaddr, &io->addr, sizeof(struct in_addr));
-		mreq.imr_interface.s_addr = htonl(INADDR_ANY);
-		if (setsockopt(sock, IPPROTO_IP, IP_ADD_MEMBERSHIP, &mreq, sizeof(mreq)) < 0) {
-			ts_LOGf("setsockopt(IP_ADD_MEMBERSHIP %s): %s\n", inet_ntoa(io->addr), strerror(errno));
+	if (is_multicast(&addr)) {
+		if (join_multicast_group(sock, io->ttl, &addr) < 0) {
+			close(sock);
 			return -1;
 		}
-	}
-	// bind to the socket so data can be read
-	struct sockaddr_in receiving_from;
-	memset(&receiving_from, 0, sizeof(receiving_from));
-	receiving_from.sin_family = AF_INET;
-	receiving_from.sin_addr   = io->addr;
-	receiving_from.sin_port   = htons(io->port);
-	if (bind(sock, (struct sockaddr *) &receiving_from, sizeof(receiving_from)) < 0) {
-		ts_LOGf("bind(): %s\n", strerror(errno));
-		return -1;
 	}
 
 	io->fd = sock;
@@ -69,51 +161,51 @@ int udp_connect_input(struct io *io) {
 }
 
 int udp_connect_output(struct io *io) {
-	int sock = socket(AF_INET, SOCK_DGRAM, 0);
-	if (sock < 0) {
-		ts_LOGf("socket(SOCK_DGRAM): %s\n", strerror(errno));
+	struct sockaddr_storage addr;
+	int addrlen = sizeof(addr);
+	int sock = -1;
+
+	memset(&addr, 0, sizeof(addr));
+
+	ts_LOGf("Connecting output to %s port %s ttl: %d\n",
+		io->hostname, io->service, io->ttl);
+	if (bind_addr(io->hostname, io->service, SOCK_DGRAM, &addr, &addrlen, &sock) < 0)
 		return -1;
-	}
 
-	ts_LOGf("Connecting output to udp://%s:%d ttl:%d\n",
-		inet_ntoa(io->addr), io->port, io->ttl);
-
-	int on = 1;
-	setsockopt(sock, SOL_SOCKET, SO_REUSEADDR, &on, sizeof(on));
-	set_sock_nonblock(sock);
-
-	/* Set receive buffer size to ~2.0MB */
+	/* Set send buffer size to ~2.0MB */
 	int bufsize = (2000000 / 1316) * 1316;
 	setsockopt(sock, SOL_SOCKET, SO_SNDBUF, (void *)&bufsize, sizeof(bufsize));
 
-	// subscribe to multicast group
-	if (IN_MULTICAST(ntohl(io->addr.s_addr))) {
-		int ttl = io->ttl;
-		if (setsockopt(sock, IPPROTO_IP, IP_MULTICAST_TTL, &ttl, sizeof(ttl)) < 0) {
-			ts_LOGf("setsockopt(IP_MUTICAST_TTL): %s\n", strerror(errno));
+	if (is_multicast(&addr)) {
+		if (join_multicast_group(sock, io->ttl, &addr) < 0) {
 			close(sock);
 			return -1;
-		}
-		if (setsockopt(sock, IPPROTO_IP, IP_MULTICAST_IF, &io->intf, sizeof(io->intf)) < 0) {
-			ts_LOGf("setsockopt(IP_MUTICAST_IF %s): %s\n", inet_ntoa(io->intf), strerror(errno));
-			close(sock);
-			return -1;
+		} else {
+			if (addr.ss_family == AF_INET) {
+				if (setsockopt(sock, IPPROTO_IP, IP_MULTICAST_IF, &io->intf, sizeof(io->intf)) < 0) {
+					ts_LOGf("ERROR: setsockopt(IP_MUTICAST_IF %s): %s\n", inet_ntoa(io->intf), strerror(errno));
+					close(sock);
+					return -1;
+				}
+			}
+			if (addr.ss_family == AF_INET6 && io->v6_if_index > -1) {
+				if (setsockopt(sock, IPPROTO_IPV6, IPV6_MULTICAST_IF, (void *)&io->v6_if_index, sizeof(io->v6_if_index)) < 0) {
+					ts_LOGf("ERROR: setsockopt(IPV6_MUTICAST_IF %d): %s\n", io->v6_if_index, strerror(errno));
+					close(sock);
+					return -1;
+				}
+			}
 		}
 	}
 
-	if (io->tos > -1) {
+	if (addr.ss_family == AF_INET && io->tos > -1) {
 		if (setsockopt(sock, IPPROTO_IP, IP_TOS, &io->tos, sizeof(io->tos)) < 0) {
-			ts_LOGf("setsockopt(IP_TOS 0x%02x): %s\n", io->tos, strerror(errno));
+			ts_LOGf("ERROR: setsockopt(IP_TOS 0x%02x): %s\n", io->tos, strerror(errno));
 		}
 	}
 
-	struct sockaddr_in sockaddr;
-	memset(&sockaddr, 0, sizeof(sockaddr));
-	sockaddr.sin_family			= AF_INET;
-	sockaddr.sin_addr.s_addr	= io->addr.s_addr;
-	sockaddr.sin_port			= htons(io->port);
-	if (connect(sock, (struct sockaddr *)&sockaddr, sizeof(sockaddr))) {
-		ts_LOGf("udp_connect() error: %s\n", strerror(errno));
+	if (connect(sock, (struct sockaddr *)&addr, addrlen) < 0) {
+		ts_LOGf("ERROR: udp_connect(): %s\n", strerror(errno));
 		close(sock);
 		return -1;
 	}
